--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,18 @@
-<p>about works!</p>
+<div class="info-container">
+    <h2>Curriculum Vitae</h2>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <!-- Add more items as needed -->
+    </ul>
+  </div>
+  
+  <div class="info-container">
+    <h2>Professional Experience</h2>
+    <ul>
+      <li>Experience 1</li>
+      <li>Experience 2</li>
+      <!-- Add more experiences as needed -->
+    </ul>
+  </div>
+  
