--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -1,8 +1,1 @@
-<div class="button-container">
-    <div class="row">
-      <div class="col-md-12 text-center" style="margin-top: 30px;">
-        <button class="btn btn-primary" style="margin: 10px;" (click)="loginEvent.emit()">Login</button>
-        <button class="btn btn-secondary" style="margin: 10px;" (click)="logoutEvent.emit()">Logout</button>
-      </div>
-    </div>
-  </div>
+<p>buttons works!</p>
