--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,7 +1,1 @@
-<div>
-    
-
-    <app-welcome-content *ngIf="componentToShow == 'welcome'"/>
-    
-    <app-auth-content *ngIf="componentToShow == 'messages'"/>
-</div>
+<p>content works!</p>
