--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,6 @@
 <div>
-    
+    <app-buttons (loginEvent)="showComponent('login')"
+                (logoutEvent)="showComponent('welcome')"/>
 
     <app-welcome-content *ngIf="componentToShow == 'welcome'"/>
     
