--- a/src/app/welcome-content/welcome-content.component.html
+++ b/src/app/welcome-content/welcome-content.component.html
@@ -1,1 +1,5 @@
-<p>welcome-content works!</p>
+<div class="welcome-container">
+    <h1>Welcome to Patient Dashboard!</h1>
+    <p>Please login or register to continue.</p>
+  </div>
+  
