--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -3,6 +3,9 @@
                 (logoutEvent)="showComponent('welcome')"/>
 
     <app-welcome-content *ngIf="componentToShow == 'welcome'"/>
-    
+    <app-login-form *ngIf="componentToShow == 'login'" 
+    (onSubmitLoginEvent)="onLogin($event)"
+    (onSubmitRegisterEvent)="onRegister($event)"
+    />
     <app-auth-content *ngIf="componentToShow == 'messages'"/>
 </div>
