--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,11 +1,8 @@
 <div>
-    <app-buttons (loginEvent)="showComponent('login')"
-                (logoutEvent)="showComponent('welcome')"/>
-
-    <app-welcome-content *ngIf="componentToShow == 'welcome'"/>
-    <app-login-form *ngIf="componentToShow == 'login'" 
-    (onSubmitLoginEvent)="onLogin($event)"
-    (onSubmitRegisterEvent)="onRegister($event)"
-    />
-    <app-auth-content *ngIf="componentToShow == 'messages'"/>
-</div>
+    <app-buttons (loginEvent)="showComponent('login')" (logoutEvent)="showComponent('welcome')"></app-buttons>
+  
+    <app-welcome-content *ngIf="componentToShow === 'welcome'"></app-welcome-content>
+    <app-login-form *ngIf="componentToShow === 'login'" (onSubmitLoginEvent)="onLogin($event)" (onSubmitRegisterEvent)="onRegister($event)"></app-login-form>
+    <app-auth-content *ngIf="componentToShow === 'auth-content'"></app-auth-content>
+  </div>
+  
