--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,43 +1,42 @@
 /* Info Container */
 .info-container {
-    background-color: #f0f8ff; /* Baby blue */
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for better separation */
+  background-color: #e4c1a1; /* Light purple-gray background */
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
+}
+
+/* Headings */
+.info-container h2 {
+  color: #474973; /* Dark blue-gray */
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+/* List */
+.info-container ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.info-container ul li {
+  margin-bottom: 10px;
+  color: #474973; /* Dark blue-gray */
+  font-size: 16px;
+}
+
+/* Mobile Styles */
+@media screen and (max-width: 768px) {
+  .info-container {
+    padding: 15px;
   }
-  
-  /* Headings */
+
   .info-container h2 {
-    color: #007bff; /* Match with the primary blue color */
-    font-size: 24px;
-    margin-bottom: 15px;
+    font-size: 20px;
   }
-  
-  /* List */
-  .info-container ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
+
   .info-container ul li {
-    margin-bottom: 10px;
-    color: #333; /* Darker color for better readability */
-    font-size: 16px;
+    font-size: 14px;
   }
-  
-  /* Mobile Styles */
-  @media screen and (max-width: 768px) {
-    .info-container {
-      padding: 15px;
-    }
-  
-    .info-container h2 {
-      font-size: 20px;
-    }
-  
-    .info-container ul li {
-      font-size: 14px;
-    }
-  }
-  
+}
