--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 /* Header */
 header {
-    background-color: #007bff; /* Blue color */
-    color: #fff; /* White text */
+  background-color: #f1dac4;
+    color: #fff; 
     padding: 10px 20px;
   }
   
@@ -19,7 +19,7 @@ header {
   }
   
   #middle-container a {
-    color: #fff; /* White text for link */
+    color: #474973; 
     text-decoration: none; /* Remove underline */
     font-size: 24px; /* Adjust font size */
     font-weight: bold;
@@ -29,23 +29,24 @@ header {
   .se-icon svg {
     width: 24px; /* Adjust size */
     height: 24px; /* Adjust size */
-    fill: #fff; /* White color for logo */
+    fill: #474973; 
     transition: fill 0.3s ease; /* Smooth transition effect */
   }
   
   .se-icon:hover svg {
-    fill: #ffc107; /* Yellow color on hover */
+    fill:  #007bff; 
   }
   
   /* Main */
   main {
     padding: 20px;
+    background-color: #f1dac4;
   }
   
   /* Footer */
   footer {
-    background-color: #f8f9fa; /* Light grey */
-    color: #333; /* Dark grey text */
+    background-color: rgb(244, 218, 196); 
+    color: #474973; 
     text-align: center;
     padding: 10px;
   }
@@ -62,7 +63,7 @@ header {
     }
   
     #middle-container a {
-      font-size: 20px; /* Decrease font size for smaller screens */
+      font-size: 20px; 
     }
   
     #left-container,
