--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,71 +1,75 @@
 .popup-navigation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-  }
-  
-  .popup-navigation.show {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .navigation-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  
-  
-  .close-button {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    cursor: pointer;
-    color: black;
-    padding-top: 50px;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    padding-top: 100px;
-  }
-  
-  ul li {
-    margin-bottom: 10px;
-  }
-  
-  ul li a {
-    color: #333;
-    text-decoration: none;
-    font-size: 18px;
-  }
-  
-  ul li a:hover {
-    text-decoration: underline;
-  }
-  
-  .social-media-list {
-    margin-top: 20px;
-  }
-  
-  .social-media-list li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .social-media-list li:last-child {
-    margin-right: 0;
-  }
-  
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 1;
+  animation: fadeInOut 0.3s ease; /* Apply fade-in/out animation */
+}
+
+.popup-navigation.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navigation-content {
+  background-color: #f1dac4;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  cursor: pointer;
+  color: black;
+  padding-top: 50px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  padding-top: 100px;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
+
+ul li a {
+  color: rgb(71, 73, 115);
+  text-decoration: none;
+  font-size: 18px;
+}
+
+ul li a:hover {
+  text-decoration: underline;
+}
+
+.social-media-list {
+  margin-top: 20px;
+}
+
+.social-media-list li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.social-media-list li:last-child {
+  margin-right: 0;
+}
+
+/* Define the fade-in/out animation */
+@keyframes fadeInOut {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
