--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -6,6 +6,7 @@
     (onSubmitLoginEvent)="onLogin($event)"
     (onSubmitRegisterEvent)="onRegister($event)"
     />
-    <app-auth-content *ngIf="componentToShow == 'messages'"/>
+    <app-auth-content *ngIf="componentToShow == 'messages'"
+    />
   </div>
   
