--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,13 +9,18 @@
 </div>
 
 <div>
-  <app-buttons (loginEvent)="showComponent('login')" (logoutEvent)="showComponent('welcome')"></app-buttons>
+  <div *ngIf="!authService.isLoggedIn()"> <!-- Hide the login button if user is logged in -->
+    <app-buttons (loginEvent)="showComponent('login')" (logoutEvent)="showComponent('welcome')"></app-buttons>
+  </div>
+  <div *ngIf="authService.isLoggedIn()"> <!-- Show logout button if user is logged in -->
+    <button (click)="onLogout()">Logout</button>
+  </div>
   <app-login-form *ngIf="componentToShow == 'login'" 
                   (onSubmitLoginEvent)="onLogin($event)" 
                   (onSubmitRegisterEvent)="onRegister($event)">
   </app-login-form>
-  
-  <div *ngIf="componentToShow == 'message'" class="contact-form-container">
+  <app-contact-welcome-content *ngIf="componentToShow === 'welcome'"></app-contact-welcome-content>
+  <div *ngIf="componentToShow == 'messages'" class="contact-form-container">
     <h2>Contact Form</h2>
     <form (ngSubmit)="onSubmitMessage()">
       <div class="form-group">
