--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,12 +1,14 @@
 <div>
-  <app-buttons (loginEvent)="showComponent('login')"
-                (logoutEvent)="showComponent('welcome')"/>
+  <div *ngIf="!authService.isLoggedIn()"> <!-- Hide the login button if user is logged in -->
+    <app-buttons (loginEvent)="showComponent('login')" (logoutEvent)="showComponent('welcome')"></app-buttons>
+  </div>
+  <div *ngIf="authService.isLoggedIn()"> <!-- Show logout button if user is logged in -->
+    <button (click)="onLogout()">Logout</button>
+  </div> 
   <app-welcome-content *ngIf="componentToShow === 'welcome'"></app-welcome-content>
   <app-login-form *ngIf="componentToShow == 'login'" 
     (onSubmitLoginEvent)="onLogin($event)"
     (onSubmitRegisterEvent)="onRegister($event)"
-    />
-    <app-auth-content *ngIf="componentToShow == 'messages'"
-    />
-  </div>
-  
+  ></app-login-form>
+  <app-dashboard-menu *ngIf="componentToShow == 'messages'"></app-dashboard-menu>
+</div>
