--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,9 @@
         </div>
       </div>
     </div>
-  
+
+    <app-carousel></app-carousel>
+  <br>
     <!-- Educational Resources Container -->
     <div class="education-container">
       <h2>Educational Resources</h2>
