--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,1 +1,48 @@
-<h1>Coming Soon!</h1>
+<section class="shop">
+    <div class="container">
+        <h2>Welcome to Poching Lao's Beauty Care Products</h2>
+        <p>Discover a range of meticulously curated beauty care products personally recommended by Poching Lao. Each item in our collection reflects Poching's commitment to enhancing your natural beauty with clinically proven formulas and ingredients.</p>
+        
+        <div class="products">
+            <article class="product">
+                <img src="s2495497-main-zoom.webp" alt="Product 1">
+                <h3>Summer Fridays</h3>
+                <p>Lip Butter Balm for Hydration & Shine</p>
+                <span class="price">$24.00</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </article>
+            <article class="product">
+                <img src="s2031391-main-zoom.webp" alt="Product 1">
+                <h3>The Ordinary</h3>
+                <p>Niacinamide 10% + Zinc 1% Oil Control Serum </p>
+                <span class="price">$6.00</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </article>
+            <article class="product">
+                <img src="s2556744-main-zoom.webp" alt="Product 1">
+                <h3>Touchland</h3>
+                <p>Power Mist Hydrating Hand Sanitizer</p>
+                <span class="price">$10.00</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </article>
+            <article class="product">
+                <img src="s2743045-main-zoom.webp" alt="Product 1">
+                <h3>LANEIGE</h3>
+                <p>Dreamy Lip Kit</p>
+                <span class="price">$20.00</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </article>
+            <article class="product">
+                <img src="s2535581-main-zoom.webp" alt="Product 1">
+                <h3>Glow Recipe</h3>
+                <p>Watermelon Glow PHA + BHA Pore-Tight Toner</p>
+                <span class="price">$35.00</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </article>
+            
+
+            <!-- Repeat this article block for each product -->
+            
+        </div>
+    </div>
+</section>
